spacing issue fixed

--- a/src/components/Commodities/index.module.scss
+++ b/src/components/Commodities/index.module.scss
@@ -1,42 +1,33 @@
 .card {
 //    width: 406px;
 //     height: 401px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
+    background: #FFFFFF;
     box-shadow: 0px 3px 12px #E5E7ED;
     border: 1px solid #D2D7E5;
     border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    padding:10px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: flex-start;
+    // flex-direction: column;
+    // padding:10px;
     border-radius: 8px;
     margin-bottom: 24px;
     
 
     .header {
-            /* padding: 0.75rem 1.25rem; */
-        margin-bottom: 0;
         background-color: rgb(0 0 0 / 0%);
         border-bottom: none;
             
-        margin: 0.5rem;
-        text-align: left;
-        font-family: Helvetica;
+        margin: 0 0 20px;
+        // text-align: left;
         font-weight: bold;
         font-size: 18px;
         line-height: 23px;
-        letter-spacing: 0px;
+        // letter-spacing: 0px;
         color: #111111;
         text-transform: capitalize;
-        padding-left:0 !important;
-    }
-
-    .hr {
-        margin-top: 0px;
-        width: 100%;
-        border-top: 2px solid rgb(242 243 244);
-        ;
+        border-bottom: 2px solid #F2F5F9;
+        padding: 16px 22px;
     }
 
     .body {
@@ -46,36 +37,33 @@
         width: 100%;
         height: 100%;
         flex-direction: column;
-        padding: 0px !important;
+        padding: 0 22px 20px;
       
       
         .wrapper{
             display: flex;
             justify-content: flex-start;
             align-items: center;
-               width: 100%;
-                height: 47px;
-                padding-right: 0.5rem;
-                    padding-left: 0.5rem;
+            width: 100%;
+            // height: 47px;
                    
-           
             span{
                     
                 width: 30%;
                 height:100%;
                 font-family: Helvetica;
-                    font-weight: medium;
-                    font-size: 18px;
-                    line-height: 23px;
+                font-weight: medium;
+                font-size: 18px;
+                line-height: 23px;
                 padding: 0px 1.25rem;
-                    letter-spacing: 0px;
-                    color: #111111;
-                    text-transform: capitalize;
-                    opacity: 0.7;
-                    display: flex;
-                        justify-content: flex-start;
-                        align-items: center;
-                        padding-left: 0px;
+                letter-spacing: 0px;
+                color: #111111;
+                text-transform: capitalize;
+                opacity: 0.7;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                padding-left: 0px;
             }
             .graph{
                 width: 70%;
@@ -83,18 +71,18 @@
               
                 position: relative;
                 direction: rtl;
+                margin-bottom: 14px;
                 // padding-right:  1.25rem;
                 span{
                     text-align: right;
                     font-family: Helvetica;
-                        font-weight:bold;
-                        font-size: 18px;
-                        line-height: 23px;
-                      
-                        letter-spacing: 0px;
-                        color: #2884DE;
-                        margin-right: 0.5rem;
-                        padding:0px
+                    font-weight:bold;
+                    font-size: 18px;
+                    line-height: 23px;
+                    
+                    letter-spacing: 0px;
+                    color: #2884DE;
+                    padding: 13px;
                 }
                 .bar{
                 
@@ -103,7 +91,7 @@
                     width: 70%;
                     height: 100%;
                     top:0;
-                    right: -0.5rem;
+                    // right: -0.5rem;
                     opacity: 0.1;
                     border-radius: 2px;
                 }
